feat: added update booking stored procedure
